# the-hotchocolabot

./: .editorconfig  .gitignore  .guix-channel  CHANGELOG.adoc  CITATION.cff  Cargo.toml  Containerfile  ECOSYSTEM.scm  HANDOVER.md  Justfile  LICENSE-APACHE  LICENSE-MIT  META.scm  README.adoc  README.md  RSR_COMPLIANCE.adoc  STATE.scm  codemeta.json  config.toml.example  guix.scm
.github/workflows/: codeql.yml  ghcr-publish.yml  guix-nix-policy.yml  jekyll-gh-pages.yml  npm-bun-blocker.yml  quality.yml  release.yml  rsr-antipattern.yml  rust-ci.yml  rust_ci.yml  scorecard.yml  security-policy.yml  wellknown-enforcement.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: dc.xml
docs/: CITATIONS.adoc
education/activities/: student_activity_sheets.md
education/assessments/: workshop_survey.md
education/workshops/: workshop_curriculum.md
src/: main.rs
src/config/: mod.rs
src/control/: mod.rs
src/hardware/: display.rs  mock.rs  mod.rs  pump.rs  sensor.rs
src/safety/: mod.rs
